style: ✨ Correct element alignment (#9)
* Move buttons to the bottom

Also center the count in the middle

* Change start/stop button

* Make counter type bigger

Add pointer cursor for buttons

* Fix button alignment, give count more space

--- a/src/components/Controls.css
+++ b/src/components/Controls.css
@@ -4,9 +4,10 @@ button {
   border: solid 4px #c2f261;
   color: #c2f261;
   font-family: "Anonymous Pro", monospace;
-  font-size: 36px;
+  font-size: 24px;
   background: #353535;
-  padding: 40px;
+  padding: 40px 0;
+  cursor: pointer;
 }
 
 .controls ul {
@@ -14,6 +15,7 @@ button {
   list-style: none;
   grid-auto-flow: column;
   grid-template-columns: 1fr 1fr;
+  grid-gap: 1px;
   margin: 0;
   padding: 0;
 }
